# gesture-ml

./: .gitignore  Makefile  README.md  camera_demo.py  camera_predict.py  collect_data.py  gesture-ml-report.docx  pyproject.toml  requirements.txt
configs/: config.yaml
data/processed/: features.npy  labels.npy
data/raw/0/: 0000.npy  0001.npy  0002.npy  0003.npy  0004.npy  0005.npy  0006.npy  0007.npy  0008.npy  0009.npy  0010.npy  0011.npy  0012.npy  0013.npy  0014.npy  0015.npy  0016.npy  0017.npy  0018.npy  0019.npy  0020.npy  0021.npy  0022.npy  0023.npy  0024.npy  0025.npy  0026.npy  0027.npy  0028.npy  0029.npy  0030.npy  0031.npy  0032.npy  0033.npy  0034.npy  0035.npy  0036.npy  0037.npy  0038.npy  0039.npy  (+412 more)
data/raw/1/: 0000.npy  0001.npy  0002.npy  0003.npy  0004.npy  0005.npy  0006.npy  0007.npy  0008.npy  0009.npy  0010.npy  0011.npy  0012.npy  0013.npy  0014.npy  0015.npy  0016.npy  0017.npy  0018.npy  0019.npy  0020.npy  0021.npy  0022.npy  0023.npy  0024.npy  0025.npy  0026.npy  0027.npy  0028.npy  0029.npy  0030.npy  0031.npy  0032.npy  0033.npy  0034.npy  0035.npy  0036.npy  0037.npy  0038.npy  0039.npy  (+247 more)
data/raw/2/: 0000.npy  0001.npy  0002.npy  0003.npy  0004.npy  0005.npy  0006.npy  0007.npy  0008.npy  0009.npy  0010.npy  0011.npy  0012.npy  0013.npy  0014.npy  0015.npy  0016.npy  0017.npy  0018.npy  0019.npy  (+292 more)
models/: best_model.onnx.data  best_model.pt
src/: __init__.py  api.py  camera_predict.py  collect_data.py  data.py  extract_landmarks.py  model.py  predict.py  train.py  utils.py  visualize.py
tests/: __init__.py  test_pipeline.py
(+2687 files in other folders)
